# sem3_lab7_c_-------

./: CMakeLists.txt  Hash.cpp  Hash.h  ScannerDirectory.cpp  ScannerDirectory.h  info.txt  main.cpp
.github/workflows/: release.yml
test_scanner/: file1.txt  large.txt  readme.md
test_scanner/backup/: backup.txt
test_scanner/docs/: report.txt
